--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                     <div class="col-md-3">
                       <div class="card" style="width:100%">
-                        <img src="C:\MEAN--MERN\Web Professional\Bootstrap\assets\images\mobile.jpeg" class="card-img-top" alt="...">
+                        <img src="assets\images\mobile.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Product Name</h5>
                           <p class="card-title">Product Details</p>
