--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </div> <!--Product 1 End-->
                     <div class="col-md-3">
                       <div class="card" style="width:100%">
-                        <img src="C:\MEAN--MERN\Web Professional\Bootstrap\assets\images\mobile.jpeg" class="card-img-top" alt="...">
+                        <img src="assets\images\mobile.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Product Name</h5>
                           <p class="card-title">Product Details</p>
@@ -129,7 +129,7 @@
                     </div> <!--Product 2 End-->
                     <div class="col-md-3">
                       <div class="card" style="width:100%">
-                        <img src="C:\MEAN--MERN\Web Professional\Bootstrap\assets\images\mobile.jpeg" class="card-img-top" alt="...">
+                        <img src="assets\images\mobile.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Product Name</h5>
                           <p class="card-title">Product Details</p>
@@ -140,7 +140,7 @@
                     </div> <!--Product 3 End-->
                     <div class="col-md-3">
                       <div class="card" style="width:100%">
-                        <img src="C:\MEAN--MERN\Web Professional\Bootstrap\assets\images\mobile.jpeg" class="card-img-top" alt="...">
+                        <img src="assets\images\mobile.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Product Name</h5>
                           <p class="card-title">Product Details</p>
