--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Ecomm|Home</title>
 </head>
 <body>
+  <!--Header Start-->
     <div class="container">
         
         <div class="row mt-3">
@@ -17,7 +18,7 @@
                 <nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
                     <div class="container-fluid">
 
-                      <a class="navbar-brand" href="#"><strong>Estore</strong></a>
+                      <a class="navbar-brand" href="index.html"><strong>Estore</strong></a>
 
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -59,8 +60,8 @@
                           </li>
                         </ul>
                         <form class="d-flex" role="search">
-                          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                          <button class="btn btn-outline-success" type="submit">Search</button>
+                          <input class="form-control me-2" type="search" placeholder="Search here" aria-label="Search">
+                          <button class="btn btn-dark btn-outline-primary" type="submit">Search</button>
                         </form>
                       </div>
                     </div>
@@ -69,6 +70,7 @@
                   <div class="row">
                   </div>
             </div> <!--Navigation bar End-->
+            <!--Header End-->
             
         </div> 
         <div class="row">
@@ -90,7 +92,7 @@
                         <input type="number" class="form-control" name="" id="Input2" placeholder="Max value">
                         </div>
                         <div class="mb-3">
-                            <input type="submit" class="btn btn-danger" value="search">
+                            <input type="submit" class="btn btn-light btn-outline-primary" value="search">
                         </div>
                </form>
                <h5>Sort by Price</h5>
@@ -107,45 +109,45 @@
 
                     <div class="col-md-3">
                       <div class="card" style="width:100%">
-                        <img src="assets\images\mobile.jpeg" class="card-img-top" alt="...">
+                        <img src="C:\MEAN--MERN\Web Professional\Bootstrap\assets\images\mobile.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Product Name</h5>
-                          <p class="card-title">Product Details</p>
-                          <p class="card-title">Rs.1000</p>
-                          <a href="product_details.html" class="btn btn-danger">See Details</a>
+                          <h5 class="card-title">Samsung S23+</h5>
+                          <p class="card-title">Best Camera Phone</p>
+                          <p class="card-title">Rs.75,000</p>
+                          <a href="product_details.html" class="btn btn-light btn-outline-primary">See Details</a>
                         </div>
                       </div>
                     </div> <!--Product 1 End-->
                     <div class="col-md-3">
                       <div class="card" style="width:100%">
-                        <img src="assets\images\mobile.jpeg" class="card-img-top" alt="...">
+                        <img src="C:\MEAN--MERN\Web Professional\Bootstrap\assets\images\mobile.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Product Name</h5>
-                          <p class="card-title">Product Details</p>
-                          <p class="card-title">Rs.1000</p>
-                          <a href="product_details.html" class="btn btn-danger">See Details</a>
+                          <h5 class="card-title">iphone 13</h5>
+                          <p class="card-title">Flagship phone</p>
+                          <p class="card-title">Rs.80,000</p>
+                          <a href="product_details.html" class="btn btn-light btn-outline-primary">See Details</a>
                         </div>
                       </div>
                     </div> <!--Product 2 End-->
                     <div class="col-md-3">
                       <div class="card" style="width:100%">
-                        <img src="assets\images\mobile.jpeg" class="card-img-top" alt="...">
+                        <img src="C:\MEAN--MERN\Web Professional\Bootstrap\assets\images\mobile.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Product Name</h5>
-                          <p class="card-title">Product Details</p>
-                          <p class="card-title">Rs.1000</p>
-                          <a href="product_details.html" class="btn btn-danger">See Details</a>
+                          <h5 class="card-title">Google pixel 7</h5>
+                          <p class="card-title">vanila android</p>
+                          <p class="card-title">Rs.55,000</p>
+                          <a href="product_details.html" class="btn btn-light btn-outline-primary">See Details</a>
                         </div>
                       </div>
                     </div> <!--Product 3 End-->
                     <div class="col-md-3">
                       <div class="card" style="width:100%">
-                        <img src="assets\images\mobile.jpeg" class="card-img-top" alt="...">
+                        <img src="C:\MEAN--MERN\Web Professional\Bootstrap\assets\images\mobile.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Product Name</h5>
-                          <p class="card-title">Product Details</p>
-                          <p class="card-title">Rs.1000</p>
-                          <a href="product_details.html" class="btn btn-danger">See Details</a>
+                          <h5 class="card-title">Oneplus 11</h5>
+                          <p class="card-title">Gaming phone</p>
+                          <p class="card-title">Rs.78,000</p>
+                          <a href="product_details.html" class="btn btn-light btn-outline-primary">See Details</a>
                         </div>
                       </div>
                     </div> <!--Product 4 End-->
@@ -178,10 +180,11 @@
         <div class="col-md-4">
           <h5>Connect US</h5>
           <hr>
-          <h3 class="social"></h3><a href="https://facebook.com" target="_blank" ><i class="bi bi-facebook text-danger"></i></a></h3>&nbsp;&nbsp;
-          <h3 class="social"></h3><a href="https://instagram.com" target="_blank" ><i class="bi bi-instagram text-danger"></i></a></h3>&nbsp;&nbsp;
-          <h3 class="social"></h3><a href="https://twitter.com" target="_blank" ><i class="bi bi-twitter text-danger"></i></a></h3>&nbsp;&nbsp;
-          <h3 class="social"></h3><a href="https://linkedin.com" target="_blank" ><i class="bi bi-linkedin text-danger"></i></a></h3>
+          <h3 class="social"></h3><a href="https://facebook.com" target="_blank" ><i class="bi bi-facebook fb-icon"></i></a></h3>&nbsp;&nbsp;
+          <h3 class="social"></h3><a href="https://instagram.com" target="_blank" ><i class="bi bi-instagram insta-icon"></i></a></h3>&nbsp;&nbsp;
+          <h3 class="social"></h3><a href="https://twitter.com" target="_blank" ><i class="bi bi-twitter twit-icon"></i></a></h3>&nbsp;&nbsp;
+          <h3 class="social"></h3><a href="https://wa.me/+918208715337?text=Hey!I want to contact you." target="_blank" ><i class="bi bi-whatsapp wp-icon"></i></a></h3>&nbsp;&nbsp;
+          <h3 class="social"></h3><a href="https://linkedin.com" target="_blank" ><i class="bi bi-linkedin link-icon"></i></a></h3>
         </div>
       </div> <!--Footer End-->
     </div> 
