--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 mt-5 mx-auto shadow p-4">
-                <h3 class="text-center bg-info shadow">Login</h3>
+                <h5 class="bg-primary text-white p-2" style="text-align: center;">Login</h5>
                 <form method="post" action="">
                     <div class="mb-3">
                         <label for="input1" class="form-label"><strong>Username:</strong></label>
@@ -20,6 +20,11 @@
                         <label for="input2" class="form-label"><strong>password:</strong></label>
                         <input type="password" class="form-control" id="input2" placeholder="Enter password">
                       </div><!--Password-->
+                      <div class="mb-3">
+                        <input type="submit" class="btn btn-light btn-outline-primary" value="Login">
+                        "Not a user?"
+                        <a href="register.html" target="_blank">Register</a>
+                      </div>
                 </form>
                 
             </div>
