--- a/register.html
+++ b/register.html
@@ -10,15 +10,15 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 mt-5 mx-auto shadow p-4">
-                <h3 class="text-center bg-info shadow">Registration form</h3>
+              <h5 class="bg-primary text-white p-2" style="text-align: center;">Registration</h5>
                 <form method="post" action="">
                     <div class="mb-3">
                         <label for="input1" class="form-label"><strong>Username:</strong></label>
-                        <input type="email" class="form-control" id="input1" placeholder="Username">
+                        <input type="email" class="form-control" id="input1" placeholder="Enter Username">
                       </div> <!--Username-->
                       <div class="mb-3">
                         <label for="input2" class="form-label"><strong>password:</strong></label>
-                        <input type="password" class="form-control" id="input2" placeholder="Enter password">
+                        <input type="password" class="form-control" id="input2" placeholder="Enter Password">
                       </div><!--Password-->
                       <div class="mb-3">
                         <label for="input3" class="form-label"><strong>Confirm password</strong></label>
@@ -29,8 +29,8 @@
                         <input type="number" class="form-control" id="input4" placeholder="Enter Mobile Number">
                       </div><!--Mobile Number-->
                       <div class="mb3">
-                        <input type="submit" class="btn btn-danger" value="Register">
-                        Already user? &nbsp;&nbsp; <a href="login.html" style="text-decoration: none;"></a>
+                        <input type="submit" class="btn btn-light btn-outline-primary" value="Register">
+                        Already user? &nbsp;&nbsp; <a href="login.html" style="text-decoration: none;">Login</a>
                       </div>
                 </form>
                 
